# service-analytics

./: .env  Dockerfile  Makefile  appspec.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deployment-workflow.yml
run/: dev.py  wsgi.py
scripts/: install_dependencies.sh  start_server.sh
src/classes/: route_class.py  sqs_queue_classes.py
src/configs/: configs.py
src/controllers/: apis.py  app.py  aws_controller.py  env.py  routes.py
src/utils/: logger.py
